--- a/box/style.css
+++ b/box/style.css
@@ -1,10 +1,9 @@
 
 .cd{
-border-radius: 10px;
-border: 10px;
-border-color: black;
-height: 100px;
-width: 300px;
-background-color: blueviolet;
-
-}
+    border-radius: 10px;
+    height: 100px;
+    width: 300px;
+    background-color: blueviolet;
+    position: absolute;
+    display: block;
+    }
